--- a/index.html
+++ b/index.html
@@ -18,7 +18,22 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>questions project</h1>
+    <section class="questions">
+      <div class="title">
+        <h2>general questions</h2>
+      </div>
+      <div class="section-center">
+        <article class="question">
+          <p>do you accept all major credit cards?</p>
+          <button type="button" class="question-btn">
+            <span class="plus-icon">
+              <i class="far fa-plus-square"></i>
+            </span>
+          </button>
+        </article>
+      </div>
+      
+    </section>
     <!-- javascript -->
     <script src="app.js"></script>
   </body>
