--- a/index.html
+++ b/index.html
@@ -24,15 +24,54 @@
       </div>
       <div class="section-center">
         <article class="question">
-          <p>do you accept all major credit cards?</p>
+          <div class="question-title">
+            <p>do you accept all major credit cards?</p>
           <button type="button" class="question-btn">
             <span class="plus-icon">
               <i class="far fa-plus-square"></i>
             </span>
+            <span class="minus-icon">
+              <i class="far fa-minus-square"></i>
+            </span>
           </button>
+          </div>
+          <div class="question-text">
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea voluptatum, nemo dolorem eveniet fuga assumenda? Magni labore totam rem quae.</p>
+          </div>
+        </article>
+        <article class="question">
+          <div class="question-title">
+            <p>Do You Support Local Farmers?</p>
+          <button type="button" class="question-btn">
+            <span class="plus-icon">
+              <i class="far fa-plus-square"></i>
+            </span>
+            <span class="minus-icon">
+              <i class="far fa-minus-square"></i>
+            </span>
+          </button>
+          </div>
+          <div class="question-text">
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea voluptatum, nemo dolorem eveniet fuga assumenda? Magni labore totam rem quae.</p>
+          </div>
+        </article>
+        <article class="question">
+          <div class="question-title">
+            <p>do you Use Organic Ingredients?</p>
+          <button type="button" class="question-btn">
+            <span class="plus-icon">
+              <i class="far fa-plus-square"></i>
+            </span>
+            <span class="minus-icon">
+              <i class="far fa-minus-square"></i>
+            </span>
+          </button>
+          </div>
+          <div class="question-text">
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea voluptatum, nemo dolorem eveniet fuga assumenda? Magni labore totam rem quae.</p>
+          </div>
         </article>
       </div>
-      
     </section>
     <!-- javascript -->
     <script src="app.js"></script>
