--- a/index.html
+++ b/index.html
@@ -1,31 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Q & A</title>
-    <!-- font-awesome -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
-    />
-    <!-- extra fonts -->
-    <link
-      href="https://fonts.googleapis.com/css?family=Great+Vibes&display=swap"
-      rel="stylesheet"
-    />
-    <!-- styles -->
-    <link rel="stylesheet" href="styles.css" />
-  </head>
-  <body>
-    <section class="questions">
-      <div class="title">
-        <h2>general questions</h2>
-      </div>
-      <div class="section-center">
-        <article class="question">
-          <div class="question-title">
-            <p>do you accept all major credit cards?</p>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Q & A</title>
+  <!-- font-awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" />
+  <!-- extra fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Great+Vibes&display=swap" rel="stylesheet" />
+  <!-- styles -->
+  <link rel="stylesheet" href="styles.css" />
+</head>
+
+<body>
+  <section class="questions">
+    <div class="title">
+      <h2>general questions</h2>
+    </div>
+    <div class="section-center">
+      <article class="question">
+        <div class="question-title">
+          <p>do you accept all major credit cards?</p>
           <button type="button" class="question-btn">
             <span class="plus-icon">
               <i class="far fa-plus-square"></i>
@@ -34,14 +30,15 @@
               <i class="far fa-minus-square"></i>
             </span>
           </button>
-          </div>
-          <div class="question-text">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea voluptatum, nemo dolorem eveniet fuga assumenda? Magni labore totam rem quae.</p>
-          </div>
-        </article>
-        <article class="question">
-          <div class="question-title">
-            <p>Do You Support Local Farmers?</p>
+        </div>
+        <div class="question-text">
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea voluptatum, nemo dolorem eveniet fuga
+            assumenda? Magni labore totam rem quae.</p>
+        </div>
+      </article>
+      <article class="question">
+        <div class="question-title">
+          <p>Do You Support Local Farmers?</p>
           <button type="button" class="question-btn">
             <span class="plus-icon">
               <i class="far fa-plus-square"></i>
@@ -50,14 +47,15 @@
               <i class="far fa-minus-square"></i>
             </span>
           </button>
-          </div>
-          <div class="question-text">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea voluptatum, nemo dolorem eveniet fuga assumenda? Magni labore totam rem quae.</p>
-          </div>
-        </article>
-        <article class="question">
-          <div class="question-title">
-            <p>do you Use Organic Ingredients?</p>
+        </div>
+        <div class="question-text">
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea voluptatum, nemo dolorem eveniet fuga
+            assumenda? Magni labore totam rem quae.</p>
+        </div>
+      </article>
+      <article class="question">
+        <div class="question-title">
+          <p>do you Use Organic Ingredients?</p>
           <button type="button" class="question-btn">
             <span class="plus-icon">
               <i class="far fa-plus-square"></i>
@@ -66,14 +64,16 @@
               <i class="far fa-minus-square"></i>
             </span>
           </button>
-          </div>
-          <div class="question-text">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea voluptatum, nemo dolorem eveniet fuga assumenda? Magni labore totam rem quae.</p>
-          </div>
-        </article>
-      </div>
-    </section>
-    <!-- javascript -->
-    <script src="app.js"></script>
-  </body>
+        </div>
+        <div class="question-text">
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea voluptatum, nemo dolorem eveniet fuga
+            assumenda? Magni labore totam rem quae.</p>
+        </div>
+      </article>
+    </div>
+  </section>
+  <!-- javascript -->
+  <script src="app.js"></script>
+</body>
+
 </html>
